--- a/App/templates/postpage.html
+++ b/App/templates/postpage.html
@@ -129,7 +129,7 @@
                     <article class="related-post">
                         {% comment %} <img src="{{myblog.image.url}}" alt="Post Image" class="related-post__image"> {% endcomment %}
                         <h3 class="related-post__title">{{myblog.title}}</h3>
-                        <p class="related-related-post__content">{{myblog.body|slice:72|safe}}...</p><br>
+                        <p class="related-post__content">{{myblog.body|slice:72|safe}}...</p><br>
                         <p class="related-post__content">{{myblog.time | date:"F j, Y"}}</p>
                         <a href="{% url 'postpage' name=myblog.category.name slug=myblog.slug %}" class="related-post__link">Read more</a>
                     </article>
