--- a/App/templates/recent.html
+++ b/App/templates/recent.html
@@ -26,46 +26,46 @@
             </h2>
 
             <p class="section-text">
-                Recently published news
+                This page covers the latest happenings in the world of technology, innovation, business, and culture. This section delivers timely updates on breakthroughs, product launches, policy changes, market trends, and industry developments, helping readers stay informed and ahead in an ever-evolving digital world.
             </p>
 
             <ul class="feature-list">
-                
+
                 {% for myblog in page_obj  %}
                 <li>
                     <div class="card feature-card">
-        
+
                         <figure class="card-banner img-holder" style="--width: 1602; --height: 903;">
                         <img src="{{myblog.image.url}}" width="1602" height="903" loading="lazy"
                             alt="Self-observation is the first step of inner unfolding" class="img-cover">
                         </figure>
-        
+
                         <div class="card-content">
                             <div class="card-wrapper">
                                 <div class="card-tag">
                                     <div class="post-actionspage-recent">
-                                                      
+
                                         <button class="post-likes" onclick="toggleLike('{{ myblog.id }}')" data-id="{{ myblog.id }}" data-is-authenticated="{{ user.is_authenticated|yesno:'true,false' }}">
                                             ❤️ <span id="like-count">{{myblog.likes.count}}</span>
                                         </button>
-                            
+
                                     </div>
                                     <a href="{% url 'category_detail' name=myblog.category.name %}" class="card-badge">{{myblog.category.name}}</a>
                                     <div class="post-actionspage">
-                                                      
-                                        
+
+
                                     </div>
-                
+
                                     {% comment %} <a class="span hover-2">#{{myblog.category.name}}</a> {% endcomment %}
                                 </div>
-            
+
                                 <div class="wrapper">
                                 {% comment %} <ion-icon name="time-outline" aria-hidden="true"></ion-icon> {% endcomment %}
-            
+
                                 <span class="span">{{myblog.mins_read}} minutes read</span>
                                 </div>
                             </div>
-            
+
                             <h3 class="headline headline-3">
                                 <a href="{% url 'postpage' name=myblog.category.name slug=myblog.slug %}" class="card-title hover-2">
                                 {{myblog.title}}
@@ -75,11 +75,11 @@
                                 {{myblog.body|split_text:72|safe}}...
                             </h1>
                             <div class="card-wrapper">
-            
+
                                 <div class="profile-card">
                                 {% comment %} <img src="{{myblog.dp.url}}" width="48" height="48" loading="lazy" alt="Joseph"
                                     class="profile-banner"> {% endcomment %}
-            
+
                                 <div class="wrapper">
                                     {% comment %} <p class="card-title">{{myblog.username}}</p> {% endcomment %}
                                     <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
@@ -100,21 +100,21 @@
                                     {% endif %}
                                 </div>
                                 </div>
-            
+
                                 <a href="{% url 'postpage' name=myblog.category.name slug=myblog.slug %}" class="card-btn">Read more</a>
-            
+
                             </div>
-            
+
                         </div>
-        
+
                     </div>
                 </li>
                 {% empty %}
                     <li>No posts available.</li>
-                {% endfor %}  
-                
+                {% endfor %}
+
             </ul>
-            {% comment %} 
+            {% comment %}
             <a href="#" class="btn btn-secondary">
                 <span class="span">Show More Posts</span>
 
@@ -136,7 +136,7 @@
                             </a>
                         </div>
                     {% endif %}
-                        
+
                     {% for num in page_range %}
                         {% if page_obj.number == num %}
                             <div class="pageon">
@@ -152,8 +152,8 @@
                         <span>...</span>
                         <a href="?page={{ page_obj.paginator.num_pages }}" class="pagination-btn">{{ page_obj.paginator.num_pages }}</a>
                     {% endif %}
-                                    
-                        
+
+
                     {% if page_obj.has_next %}
                         <a href="?page={{ page_obj.next_page_number }}" class="pagination-btn" aria-label="next page">
                             <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
@@ -164,12 +164,12 @@
                                 <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
                             </a>
                         </div>
-                    {% endif %}                    
-    
+                    {% endif %}
+
                 </nav>
             </div>
             {% endif %}
-        
+
         </div>
 
     </section>
