--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -237,7 +237,7 @@
               <div class="hero-content">
                   <div class="badge pulse">
                       <i class="fas fa-link"></i>
-                      <span>Decentralized Blog</span>
+                      <span>TechScape Blog</span>
                   </div>
 
                   <h1 class="hero-title">
