--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -264,7 +264,7 @@
 
               <div class="hero-stats">
                   <div class="stat-item">
-                      <div class="stat-value" data-count="250">0</div>
+                      <div class="stat-value" data-count="{{ images_data_len }}">0</div>
                       <div class="stat-label">Articles Published</div>
                   </div>
                   <div class="stat-item">
@@ -272,7 +272,7 @@
                       <div class="stat-label">Blockchain Projects</div>
                   </div>
                   <div class="stat-item">
-                      <div class="stat-value" data-count="10k">0</div>
+                      <div class="stat-value" data-count="104">0</div>
                       <div class="stat-label">Community Members</div>
                   </div>
               </div>
