--- a/App/static/CSS/hero.css
+++ b/App/static/CSS/hero.css
@@ -76,13 +76,13 @@ body {
 }
 
 .hero-glass-container {
-    background: var(--glass);
+    /* background: var(--glass); */
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
     border: 1px solid var(--glass-border);
     border-radius: 24px;
     box-shadow: var(--glass-shadow);
-    width: inherit;
+    width: 70%;
     max-width: 1200px;
     padding: 3rem;
     margin: 2rem;
