update hero section

--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -257,9 +257,9 @@
                       </a>
                       {% if user_subscribed  %}
 
-                      <a id="userunsubscribed" onclick="suboptions('Unsubscribe')" class="cta-button secondary"> <i class="fas fa-rocket"></i>Unsubscribe</a>
+                      <a href="" id="userunsubscribed" onclick="suboptions('Unsubscribe')" class="cta-button secondary"> <i class="fas fa-rocket"></i>Unsubscribe</a>
                       {% else %}
-                      <a id="usersubscribed" onclick="suboptions('Subscribe')" class="cta-button secondary"><i class="fas fa-rocket"></i> Join Community</a>
+                      <a href="" id="usersubscribed" onclick="suboptions('Subscribe')" class="cta-button secondary"><i class="fas fa-rocket"></i> Join Community</a>
                       {% endif %}
                       <!-- <a href="#subscribe" class="cta-button secondary">
                           <i class="fas fa-rocket"></i>
