--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -33,6 +33,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   <meta name="google-adsense-account" content="ca-pub-4851033849501475">
+  <meta name="google-site-verification" content="YPH1AeQVu3gg0AuIS_3sng5PEM1oOfRYRswX67aLfqk" />
 
 
   <!--
