--- a/App/static/CSS/postpag112.css
+++ b/App/static/CSS/postpag112.css
@@ -623,4 +623,10 @@ button {
 100% { opacity: 1; }
 }
 
+.blue-link {
+    color: blue;
+    text-decoration: underline;
+    display: inline-block;
+    width: fit-content;
+}
 
